--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,85 +1,84 @@
-@import "./reset.css";
+@import './reset.css';
 
 /* ---------------------------------------------------- */
 /*                                                      */
 /* ---------------------------------------------------- */
 
 :root {
-    --app-blue-fb: #607dbc;
-    --app-dark-bg: #1a1d28;
-    --app-light-bg: #f0f2f4;
-    --app-red: #ff3c57;
-    --app-green: #33ab4e;
-    --app-purple: #833cff;
-    --app-orange: #ff833c;
-    --app-blue: #3c57ff;
-    --app-blue-hover: #364ee6;
+	--app-blue-fb: #607dbc;
+	--app-dark-bg: #1a1d28;
+	--app-light-bg: #f0f2f4;
+	--app-red: #ff3c57;
+	--app-green: #33ab4e;
+	--app-purple: #833cff;
+	--app-orange: #ff833c;
+	--app-blue: #3c57ff;
+	--app-blue-hover: #364ee6;
 }
 
 body {
-    background-color: var(--app-light-bg);
+	background-color: var(--app-light-bg);
 }
 
 .container {
-    width: min(100% - 30px, 880px);
-    margin-inline: auto;
+	width: min(100% - 30px, 880px);
+	margin-inline: auto;
 }
 /* ---------------------------------------------------- */
 /*     Header                                           */
 /* ---------------------------------------------------- */
 
-
 header {
-    height: 56px;
+	height: 56px;
 }
 
 .flexbox {
-    display: flex;
+	display: flex;
 }
 
 .title {
-    width: 50%;
-    height: 40px;
+	width: 50%;
+	height: 40px;
 }
 
 .title h1 {
-    font-size: 32px;
-    font-weight: 600;
-    color: var(--app-red);
-    line-height: 56px;
-    letter-spacing: 0.2px;
+	font-size: 32px;
+	font-weight: 600;
+	color: var(--app-red);
+	line-height: 56px;
+	letter-spacing: 0.2px;
 }
 
 nav {
-    width: 50%;
-    text-align: right;
+	width: 50%;
+	text-align: right;
 }
 
 nav ul {
-    list-style: none;
+	list-style: none;
 }
 
-nav ul li{ 
-    display: inline;
-    line-height: 56px;
-    cursor: default;
+nav ul li {
+	display: inline;
+	line-height: 56px;
+	cursor: default;
 }
 
 nav ul li a {
-    font-size: 14px;
-    letter-spacing: 1px;
-    color: var(--app-dark-bg);
-    font-weight: 600;
-    text-decoration: none;
-    cursor: pointer;
+	font-size: 14px;
+	letter-spacing: 1px;
+	color: var(--app-dark-bg);
+	font-weight: 600;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 nav ul li a:hover {
-    text-decoration: underline var(--app-red);
+	text-decoration: underline var(--app-red);
 }
 
 nav ul li + li {
-    margin-left: 18px;
+	margin-left: 18px;
 }
 
 /* ---------------------------------------------------- */
@@ -88,87 +87,92 @@ nav ul li + li {
 
 /* ---------------------------------------------------- */
 
-.hero{
-    height: 80vh;
-    background-color: var(--app-light-bg);
-    background: rgb(255, 0, 0)url(../img/greek-food-background-traditional-different-greek-dishes-set-greek-food-background-traditional-different-greek-dishes-set-top-view-178761927.jpg) center center / cover ;
+.hero {
+	height: 80vh;
+	background-color: var(--app-light-bg);
+	background: rgb(255, 0, 0)
+		url(../img/greek-food-background-traditional-different-greek-dishes-set-greek-food-background-traditional-different-greek-dishes-set-top-view-178761927.jpg)
+		center center / cover;
 }
 
 .hero-overlay {
-    display: grid;
-    place-items: center;
-    height: 80vh;
-    background: rgb(20 24 28 / .75);
-    width: 100%;
+	display: grid;
+	place-items: center;
+	height: 80vh;
+	background: rgb(20 24 28 / 0.75);
+	width: 100%;
 }
 .map-wrapper {
-    display: grid;
-    place-items: center;
-    height: 80vh;
+	display: grid;
+	place-items: center;
+	height: 80vh;
 }
 
-
-
 .text-and-img {
-    display: grid;
-    place-items: center;
+	display: grid;
+	place-items: center;
 }
 
 img {
-    width: 200px;
-    height: 200px;
+	width: 200px;
+	height: 200px;
 }
 
 article {
-    width: 750px;
-    margin-top: 30px;
+	width: 750px;
+	margin-top: 30px;
 }
 
 article h2 {
-    color: #fff;
+	color: #fff;
 }
 
 span {
-    color: var(--app-red);
+	color: var(--app-red);
 }
 
-.mapboxgl-ctrl-bottom-left, .mapboxgl-ctrl-bottom-right {
-    display: none;
+.mapboxgl-ctrl-bottom-left,
+.mapboxgl-ctrl-bottom-right {
+	display: none;
 }
 
 .load-screen {
-    position: absolute;
-    display: block;
-    width: 50%;
-    height: 60vh;
-    background-color: var(--app-dark-bg);
-    display: grid;
-    place-items: center;
+	position: absolute;
+	display: block;
+	width: 50%;
+	height: 60vh;
+	background-color: var(--app-dark-bg);
+	display: grid;
+	place-items: center;
 }
 
 .loader {
-    border: 8px solid #f3f3f3; /* Light grey */
-    border-top: 8px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    animation: spin 2s linear infinite;
-  }
-  
+	border: 8px solid #f3f3f3; /* Light grey */
+	border-top: 8px solid #3498db; /* Blue */
+	border-radius: 50%;
+	width: 60px;
+	height: 60px;
+	animation: spin 2s linear infinite;
+}
+
 @keyframes spin {
-    0% {transform: rotate(0deg);}
-    100%{transform: rotate(360deg);}
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
 
 .hidden {
-    display: none;
+	display: none;
 }
 
 #map {
-    display: block;
-    width: 50%;
-    height: 60vh;
-    color: #fff;
+	display: block;
+	width: 50%;
+	height: 60vh;
+	color: #fff;
 }
 
 /* ---------------------------------------------------- */
@@ -176,66 +180,70 @@ span {
 /* ---------------------------------------------------- */
 
 footer {
-    background-color: var(--app-dark-bg);
-    display: flex;
-    justify-content: center;
-    padding: 30px 0
+	background-color: var(--app-dark-bg);
+	display: flex;
+	justify-content: center;
+	padding: 30px 0;
 }
 
-.footer-nav{
-    width: 100%;
+.footer-nav {
+	width: 100%;
 }
 
 .footer-nav a {
-    color: rgb(255, 255, 255);
+	color: rgb(255, 255, 255);
 }
 
 .social-media a {
-    padding: 0 10px;
+	padding: 0 10px;
 }
 
-.social-media{
-    text-align: center;
+.social-media {
+	text-align: center;
 }
 
-
-.copyright{
-    text-align: center;
+.copyright {
+	text-align: center;
 }
 
-.footer-icon{
-    font-size: 24px;
+.footer-icon {
+	font-size: 24px;
 }
 
-h4{
-    color: #fff;
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 1px;
+h4 {
+	color: #fff;
+	font-size: 12px;
+	font-weight: 400;
+	letter-spacing: 1px;
 }
-
-
 
 /* ---------------------------------------------------- */
 /* Icons
 /* ---------------------------------------------------- */
 
 .fa-linkedin {
-    color: #0072b1;
+	color: #0072b1;
 }
 
 .fa-twitter {
-    color: #00acee;
+	color: #00acee;
 }
 
 .fa-instagram {
-    color: transparent;
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-    background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-    background-clip: text;
-    -webkit-background-clip: text;
+	color: transparent;
+	background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+	background: -webkit-radial-gradient(
+		circle at 30% 107%,
+		#fdf497 0%,
+		#fdf497 5%,
+		#fd5949 45%,
+		#d6249f 60%,
+		#285aeb 90%
+	);
+	background-clip: text;
+	-webkit-background-clip: text;
 }
 
 .fa-facebook {
-    color: #3b5998;
+	color: #3b5998;
 }
